--- a/NodeEdge/Dockerfile.txt
+++ b/NodeEdge/Dockerfile.txt
@@ -29,7 +29,7 @@ USER 1200
 # Latest released version will be used by default
 #============================================
 ARG EDGE_DRIVER_VERSION
-RUN if [ -z "$EDGE_DRIVER_VERSION" ]; \
+RUN if [ -z "" ]; \
   then EDGE_MAJOR_VERSION=$(microsoft-edge --version | sed -E "s/.* ([0-9]+)(\.[0-9]+){3}.*/\1/") \
     && EDGE_DRIVER_VERSION=$(wget --no-verbose -O - "https://msedgedriver.azureedge.net/LATEST_RELEASE_${EDGE_MAJOR_VERSION}_LINUX" | tr -cd "\11\12\15\40-\176" | tr -d "\r"); \
   fi \
